--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	},
 	"suggest": {
 		"laravel/framework": "Allow using orchestra/widget component outside of Orchestra Platform",
-		"orchestra/foundation": "Using orchestra/widget with Orchestra Platform"
+		"orchestra/foundation": "Allow using orchestra/widget with Orchestra Platform"
 	},
 	"autoload": {
 		"psr-0": { 
