--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	],
 	"require": {
 		"php": ">=5.3.3",
-		"illuminate/support": "4.0.*@dev"
+		"orchestra/support": "dev-master"
 	},
 	"require-dev": {
 		"mockery/mockery": "0.8.0"
