fixed invalid composer.json
Signed-off-by: crynobone <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "orchestra/widget",
 	"description": "Orchestra Platform Widget Component",
 	"homepage": "http://orchestraplatform.com/docs/2.0/components/widget/",
-	"keywords": ["orchestra-platform", "orchestral" "laravel"],
+	"keywords": ["orchestra-platform", "orchestral", "laravel"],
 	"license": "MIT",
 	"authors": [
 		{
