--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
 	"require-dev": {
 		"mockery/mockery": "0.8.0",
 		"illuminate/container": "4.0.*",
-		"illuminate/support": "4.0.*",
-		"satooshi/php-coveralls": "~0.6"
+		"illuminate/support": "4.0.*"
 	},
 	"suggest": {
 		"laravel/framework": "Allow using orchestra/widget component outside of Orchestra Platform 2",
