--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "orchestra/widget",
 	"description": "Orchestra Platform 2 Widget Component",
-	"homepage": "http://orchestraplatform.com/docs/2.0/components/widget/",
+	"homepage": "http://orchestraplatform.com/docs/latest/components/widget/",
 	"keywords": ["orchestra-platform", "orchestral", "laravel"],
 	"license": "MIT",
 	"authors": [
@@ -12,8 +12,8 @@
 		}
 	],
 	"autoload": {
-		"psr-0": { 
-			"Orchestra\\Widget" : "src/" 
+		"psr-0": {
+			"Orchestra\\Widget" : "src/"
 		}
 	},
 	"require": {
@@ -21,7 +21,7 @@
 		"orchestra/support": "2.1.*"
 	},
 	"require-dev": {
-		"mockery/mockery": "0.8.0",
+		"mockery/mockery": "0.8.*",
 		"illuminate/container": "4.1.*",
 		"illuminate/support": "4.1.*"
 	},
