--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "orchestra/widget",
 	"description": "Orchestra Platform 2 Widget Component",
 	"homepage": "http://orchestraplatform.com/docs/latest/components/widget/",
-	"keywords": ["orchestra-platform", "orchestral", "laravel"],
+	"keywords": ["orchestra-platform", "orchestral", "laravel", "widget"],
 	"license": "MIT",
 	"authors": [
 		{
@@ -31,7 +31,7 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "2.2-dev"
+			"dev-master": "2.3-dev"
 		}
 	},
 	"minimum-stability": "dev"
