--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
 	},
 	"require": {
 		"php": ">=5.5.0",
-		"orchestra/support": "3.1.*"
+		"orchestra/support": "~3.1.0"
 	},
 	"require-dev": {
 		"mockery/mockery": "0.9.*",
-		"illuminate/container": "5.1.*"
+		"illuminate/container": "~5.1.0"
 	},
 	"suggest": {
 		"laravel/framework": "Allow using orchestra/widget component outside of Orchestra Platform (~5.1).",
