--- a/composer.json
+++ b/composer.json
@@ -21,17 +21,16 @@
         "orchestra/support": "~3.3.0"
     },
     "require-dev": {
-        "mockery/mockery": "0.9.*",
-        "illuminate/container": "~5.3.0"
-    },
-    "suggest": {
-        "laravel/framework": "Allow using orchestra/widget component outside of Orchestra Platform (~5.3).",
-        "orchestra/foundation": "Allow using orchestra/widget with Orchestra Platform (~3.3)."
+        "illuminate/container": "~5.3.0",
+        "mockery/mockery": "~0.9.4"
     },
     "extra": {
         "branch-alias": {
             "dev-master": "3.3-dev"
         }
+    },
+    "config": {
+        "sort-packages": true
     },
     "minimum-stability": "dev"
 }
