--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "require-dev": {
         "illuminate/container": "~5.4.0",
-        "mockery/mockery": "~0.9.4"
+        "mockery/mockery": "~0.9.4",
+        "phpunit/phpunit": "~5.7"
     },
     "extra": {
         "branch-alias": {
