--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,8 @@
         "orchestra/support": "~3.6.0"
     },
     "require-dev": {
-        "illuminate/container": "~5.6.0",
         "mockery/mockery": "~1.0",
+        "orchestra/testbench": "~3.6.0",
         "phpunit/phpunit": "~7.0"
     },
     "extra": {
