--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: php
 sudo: false
 
 php:
-  - 7.1
   - 7.2
+  - nightly
 
 env:
   global:
@@ -31,7 +31,7 @@ after_script:
 
 matrix:
   include:
-    - php: 7.1
+    - php: 7.2
       env: setup=coveralls coverage=yes
   allow_failures:
     - env: setup=coveralls coverage=yes
